# ros2-workspaces

./: .gitignore  README.md
real-nav-ws/: README.md
real-nav-ws/src/ped_road_seg_pkg/: package.xml  requirements.txt  setup.py
real-nav-ws/src/ped_road_seg_pkg/ped_road_seg_pkg/: img_segmentation.py
seg-ws/src/ped_orient_pkg/: MANIFEST.in  README.md  package.xml  requirements.txt  setup.cfg  setup.py
seg-ws/src/ped_orient_pkg/ped_orient_pkg/: ped_orient_node.py
slam-params/: amcl_params.yaml  map_server_params.yaml  slam_toolbox_mapping_params.yaml  unity_nav2_params.yaml
unity-inference-ws/: README.md
unity-inference-ws/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
unity-inference-ws/install/model_in_ros2node_pkg/lib/model_in_ros2node_pkg/: agent_node
unity-inference-ws/install/model_in_ros2node_pkg/share/model_in_ros2node_pkg/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
unity-inference-ws/log/: latest_build
unity-inference-ws/src/model_in_ros2node_pkg/: package.xml  setup.cfg  setup.py
unity-inference-ws/src/model_in_ros2node_pkg/launch/: unity_amcl.launch.py
unity-inference-ws/src/model_in_ros2node_pkg/model_in_ros2node_pkg/: agent_node.py
unity-inference-ws/src/model_in_ros2node_pkg/rviz/: unity_ros_inf_only_sensors.rviz
unity-nav-ws/: README.md
unity-nav-ws/src/model_in_ros2node_pkg/model_in_ros2node_pkg/: agent_node.py
unity-slam-ws/map/: unity_map.pgm  unity_map.yaml
unity-slam-ws/src/unity_robot/config/: slam_toolbox.yaml
(+2 files in other folders)
